# Selectel_FastAPI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  dockerfile  makefile  pyproject.toml
src/: main.py  schemas.py
