[tool.poetry]
name = "selectel-fastapi-app"
version = "0.1.0"
description = ""
authors = ["AntonPyshkaila <phk.anton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
uvicorn = "^0.32.1"
pydantic = "^2.10.2"
alembic = "^1.14.0"
pytest = "^8.3.3"
ruff = "^0.8.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
